<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.jose_youssef.cliente_proyecto.control.LoginActivity">

    <include android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <ProgressBar
        android:id="@+id/pbConectando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cvLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:elevation="@dimen/elevation_small"
        app:cardCornerRadius="@dimen/corner_radius_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_user"
                android:hint="@string/user" />

            <EditText
                android:id="@+id/etContrasenna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_lock_closed"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/cbSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/auto_login"/>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:elevation="0dp"
                android:onClick="onClickEnviar"
                android:src="@drawable/ic_arrow_forward" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvNotificacion"
        android:layout_below="@+id/cvLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center" />

</RelativeLayout>
